# datavalue-rs

./: .gitignore  Cargo.toml  README.md  benchmarks.md
.github/workflows/: crate-publish.yml
benches/: value_comparison.rs
scripts/: generate_summary.sh  run_benchmarks.sh  summary.md
src/: access.rs  conversion.rs  datavalue.rs  de.rs  error.rs  helpers.rs  lib.rs  operations.rs  ser.rs
tests/: json_macro_test.rs
