[package]
name = "datavalue-rs"
version = "0.1.2"
edition = "2021"
description = "High-performance Arena-based alternative to serde_json::Value"
license = "MIT"
repository = "https://github.com/codetiger/datavalue-rs"
readme = "README.md"
keywords = ["json", "arena", "performance", "serde", "value"]
categories = ["data-structures", "parsing", "memory-management"]

[dependencies]
bumpalo = "3.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "value_comparison"
harness = false

